--- a/HTML/Bai5.html
+++ b/HTML/Bai5.html
@@ -7,6 +7,51 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div>
+        <h1>Example Cafe Menu </h1>
+        <ul>
+
+            <li><a href="#">Starters</a></li>
+            <span>|</span>
+            <li><a href="#">Main Courses</a></li>
+            <span>|</span>
+            <li><a href="#">Deserts</a></li>
+        </ul>
+    </div>
+    <div>
+        <h1>Starters</h1>
+        <ul>
+            <li>Chestnut and Mushroom Goujons</li>
+            <li>Goat cheese salad</li>
+            <li>Honey Soy Chicken Kebabs</li>
+            <li>Seafood salad</li>
+        </ul>
+        <a href="#Back to top">Back to top</a>
+    </div>
+    <div>
+        <h1>Main courses</h1>
+        <ul>
+            <li>Spinach and Ricotta Roulade <a href="#">(v)</a></li>
+            <li>Beef Tournados with mustard and dill sauce</li>
+            <li>Roast Chicken Salad</li>
+            <li>Icelandic cod with parsley sauce</li>
+            <li>Mushroom Wellington <a href="#">(v)</a></li>
+        </ul>
+        <a href="#Back to top">Back to top</a>
+
+    </div>
+    <div>
+        <h1>Desserts</h1>
+        <ul>
+            <li>Lemon Sorbet<a href="#">(v)</a></li>
+            <li>Chocolate Mud Pie <a href="#">(v)</a></li>
+            <li>Pecan Pie <a href="#">(v)</a></li>
+            <li>Selection of Fine Cheeses from Around the World</li>
+        </ul>
+        <a href="#Back to top">Back to top</a>
+
+    </div>
+
+    <h3>Items marked with a (v) are suitable for vegetariens</h3>
 </body>
 </html>
